wtx-macros/tests/ui/error_enum/mandatory_outer_attrs_are_not_present.rs
#[wtx_macros::pkg(api(Foo), data_format())]
mod pkg {
  #[pkg::req_data]
  struct Req;

  #[pkg::res_data]
  struct Res;
}

fn main() {
}
